2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* src/optional/Makefile.am : Make xsl/ available
	for installation and therefore packaging.

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* src/gnome/druid-merge.c : Use new function names.
	* src/engine/test/test-book-merge.c : Use new function names.

	* lib/libqof/qof/qof_book_merge.c : Removed.
	* lib/libqof/qof/qof_book_merge.h : Removed.
	* lib/libqof/qof/qofbookmerge.c : Replacement file.
	* lib/libqof/qof/qofbookmerge.h : Replacement file.
	* lib/libqof/qof/qof.h : Use new filename.
	* lib/libqof/qof/deprecated.c : Deprecate old function
	names from qof_book_merge in favour of new from qofbookmerge.
	* lib/libqof/qof/deprecated.h : Added deprecated function
	declaration.s
	* lib/libqof/qof/Makefile.am : New files.

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/qof/qofquery-deserial.c : Update status; this
	file will not exist in libqof2

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/qof/qofevent.h : Doxygen tweak.

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/backend/file/qsf-backend.c : Remove deprecated
	glib function g_strncasecmp in favour of g_ascii_strncasecmp

2006-03-09  Neil Williams <linux@codehelp.co.uk>
	* src/optional/xsl : New directory for optional XSL
	* src/optional/xsl/vcard-gnccustomer.pl : Perl script
	to create QSF from VCards
	* src/optional/xsl/gnucash-gnccustomer-vcard2.xsl :
	XSL to generate vcards from QSF (gncCustomer)
	* src/optional/xsl/gnucash-std.xsl : Common routines
	for gnucash XSL stylesheets
	* src/optional/xsl/Makefile.am : Don't build, just install.
	* src/optional/xsl/string.xsl : xsltsl standard library XSL
	in place until available as a package.
	* src/optional/xsl/README : Notes on using XSL and examples.
	* src/optional/xsl/date-time.xsl : xsltsl standard library.
	* src/optional/Makefile.am : install only.
	* configure.in : Add instruction to build a Makefile in
	src/optional/xsl
